Fixed article headers on firefox

--- a/website/src/app/blog/[slug]/Article.css
+++ b/website/src/app/blog/[slug]/Article.css
@@ -42,6 +42,6 @@
         );
 }
 
-#title-contianer > * {
-    text-box-trim: trim-both;
+#title-container > * {
+    text-box-trim: trim-none;
 }
